# paid-skills

./: .env.example  LICENSE  README.md  pyproject.toml
examples/contract-review/: SKILL.md
examples/summarize-url/: SKILL.md
src/paid_skills/: __init__.py  cli.py  pricing.py  runtime.py  server.py  skill_loader.py
tests/: test_smoke.py
